# prompthive

./: .cargo_vcs_info.json  .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE  README.md
examples/: creative_patterns.sh
src/: cache.rs  clean.rs  clipboard.rs  common.rs  compose.rs  edit.rs  error_help.rs  health.rs  history.rs  import.rs  io_options.rs  lib.rs  logging.rs  main.rs  matching.rs  perf_verify.rs  registry.rs  registry_tui.rs  security.rs  signals.rs  storage.rs  sync_manager.rs  telemetry.rs  template.rs  tui_old.rs
src/cli/: mod.rs
src/commands/: banks.rs  clean.rs  common.rs  completion.rs  configuration.rs  core.rs  diff_merge.rs  improvement.rs  mod.rs  registry.rs  sharing.rs  statistics.rs  subscription.rs  sync.rs  sync_types.rs  teams.rs  users.rs  versioning.rs  web.rs  web_minimal.rs
src/core/: mod.rs
src/tui/: banks.rs  clipboard.rs  mod.rs  state.rs  test_install.rs
