[package]
name = "prompthive"
version = "0.2.5"
edition = "2021"
authors = ["Jory Pestorious <jory@pestorious.com>"]
description = "Open source prompt manager for developers. Terminal-native, sub-80ms operations, works with any AI tool."
license = "MIT"
homepage = "https://prompthive.sh"
documentation = "https://prompthive.sh"
keywords = ["ai", "prompts", "cli", "productivity", "terminal"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "!src/**/*.bak",
    "!src/**/*.tmp",
    "!src/**/web_broken*.rs",
    "!src/**/debug_test*.rs",
    "Cargo.toml",
    "Cargo.lock",  
    "README.md",
    "LICENSE*",
    "CONTRIBUTING.md",
    "examples/**/*.sh",
    "examples/**/*.md",
    "examples/README.md",
    "!public-templates/**/*"
]

[[bin]]
name = "ph"
path = "src/main.rs"

[[bin]]
name = "mock-registry"
path = "src/bin/mock_registry.rs"
required-features = ["registry"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Clipboard integration
copypasta = "0.10"

# File operations
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"

# Search and matching
fuzzy-matcher = "0.3"
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# YAML parsing
serde_yaml = "0.9"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# System monitoring
libc = "0.2"

# Signal handling
signal-hook = "0.3"

# Date/time handling - minimal features for size
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

# Environment variables
dotenvy = "0.15"

# Terminal colors
colored = "2.1"

# Temp file handling
tempfile = "3.0"

# Performance
once_cell = "1.19"

# Hashing for versioning
md5 = "0.7"
sha2 = "0.10"

# Path expansion
shellexpand = "3.1"

# Additional dependencies for new features (with feature flags)
walkdir = { version = "2.4", optional = true }
is-terminal = "0.4"  # Lighter alternative to atty
uuid = { version = "1.10", features = ["v4"] }
gethostname = "0.4"
hostname = "0.4"

# HTTP client for registry operations (optional) - optimized for size
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1.0", optional = true, features = ["rt", "rt-multi-thread", "macros"], default-features = false }
urlencoding = { version = "2.1", optional = true }

# Authentication and browser support
base64 = "0.22"
webbrowser = "1.0"

# Web server for mock registry (dev dependency)
actix-web = { version = "4.0", optional = true }

# TUI dependencies (optional)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.27", optional = true }

[features]
default = ["compose", "import", "tui", "registry"]
compose = []
import = ["walkdir"]
registry = ["reqwest", "tokio", "actix-web", "urlencoding"]
tui = ["ratatui", "crossterm", "tokio"]
dev = []  # For development and benchmarks
full = ["compose", "import", "registry", "tui"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "speed"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[profile.release]
# Optimize for minimal binary size - aggressive
opt-level = "z"      # Optimize for size over speed
lto = "fat"          # Full link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = "symbols"    # Strip all symbols
panic = "abort"      # Smaller panic handler
overflow-checks = false  # Disable overflow checks for size
debug = false        # No debug info
rpath = false        # No rpath
incremental = false  # No incremental compilation

# Additional aggressive optimizations
[profile.release.package."*"]
opt-level = "z"      # Optimize all dependencies for size

[profile.dev]
# Fast compilation during development
opt-level = 0

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
